--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
