add roles for the user

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "forceConsistentCasingInFileNames": true,            
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,                                 
+    "experimentalDecorators": true                                 
   }
 }
