--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "roles:seed":"ts-node src/seeder/role.seeder.ts"
+    "roles:seed": "ts-node src/seeder/role.seeder.ts",
+    "products:seed": "ts-node src/seeder/product.seeder.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.11",
     "nodemon": "^2.0.15",
@@ -27,6 +29,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.0",
     "reflect-metadata": "^0.1.13",
