--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
@@ -32,6 +33,7 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.0",
+    "multer": "^1.4.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
   }
