--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
+    "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
@@ -32,6 +33,7 @@
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
     "faker": "^5.5.3",
+    "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.0",
     "multer": "^1.4.3",
